# libvmod-var

./: .travis.yml  LICENSE  Makefile.am  README  configure.ac  vmod-var.spec
debian/: changelog  control
man/: Makefile.am  vmod_var.rst
src/: Makefile.am  vmod_var.c  vmod_var.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc
